--- a/LISBAB/html/index.html
+++ b/LISBAB/html/index.html
@@ -41,13 +41,13 @@
                 <!-- Titulo-->
                 <h1>Laboratorio de Innovación Social</h1>
                 <a href="#" class="principal-img">
-
                 <!-- Imagen inicial -->
                 <img  src="../assets/Imagen1.png" alt="imgP" class="principal-img">
                 </a>
 
                 <!-- Texto principal -->
-                <p class="initial-text">Descubre el Laboratorio de Innovación Social y potencia el impacto de tu empresa o fundación beneficiaria del Banco de Alimentos. Apoyamos iniciativas innovadoras y estratégicas con un enfoque social y sostenible. Juntos, generamos soluciones para mejorar la vida de la población. Conoce nuestros servicios y únete a nosotros para hacer la diferencia. 
+                <p class="initial-text">Descubre el Laboratorio de Innovación Social y potencia el impacto de tu empresa o 
+                    fundación beneficiaria del Banco de Alimentos. Apoyamos iniciativas innovadoras y estratégicas con un enfoque social y sostenible. Juntos, generamos soluciones para mejorar la vida de la población. Conoce nuestros servicios y únete a nosotros para hacer la diferencia. 
                     <br>¡Conócenos y sé parte del cambio!</p>
             </div>    
         </div>
@@ -57,7 +57,8 @@
     <div class="box-1"  id="box-1">
         <h3 id="t-1">Emprendimiento y Planeación</h3>
 
-        <p id="b-1">Apoyo en la postulación de proyectos y en el diseño de planes estratégicos para la viabilidad de los proyectos.</p>
+        <p id="b-1">Apoyo en la postulación de proyectos y en el diseño de 
+            planes estratégicos para la viabilidad de los proyectos.</p>
 
         <a href="../html/pag1.html"><button class="btn-more" id="info-btn-inn">Más</button></a>
     </div>
