Organizacion de archivos

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;1,300;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../styles/basic.css">
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="./styles/basic.css">
+    <link rel="stylesheet" href="./styles/index.css">
     <title>LISBAB - Página principal</title>
-    <link rel="icon" href="../assets/banco-de-alimentos-bogota.png">
+    <link rel="icon" href="./assets/banco-de-alimentos-bogota.png">
 </head>
 <body>
 
@@ -17,8 +17,8 @@
 <header class="header">
     <nav class="nav-header">
         <!-- Logo del Laboratorio de Innovación Social -->
-        <a href="../html/index.html" class="header-logo">
-            <img  src="../assets/WhatsApp Image 2023-06-26 at 4.57.51 PM.jpeg" alt="logo" class="header-icon">
+        <a href="./html/index.html" class="header-logo">
+            <img  src="./assets/WhatsApp Image 2023-06-26 at 4.57.51 PM.jpeg" alt="logo" class="header-icon">
         </a>
         <!-- Lista del menú -->
         <div>
@@ -42,7 +42,7 @@
                 <h1>Laboratorio de Innovación Social</h1>
                 <a href="#" class="principal-img">
                 <!-- Imagen inicial -->
-                <img  src="../assets/Imagen1.png" alt="imgP" class="principal-img">
+                <img  src="./assets/Imagen1.png" alt="imgP" class="principal-img">
                 </a>
 
                 <!-- Texto principal -->
@@ -60,7 +60,7 @@
         <p id="b-1">Apoyo en la postulación de proyectos y en el diseño de 
             planes estratégicos para la viabilidad de los proyectos.</p>
 
-        <a href="../html/pag1.html"><button class="btn-more" id="info-btn-inn">Más</button></a>
+        <a href="./html/pag1.html"><button class="btn-more" id="info-btn-inn">Más</button></a>
     </div>
 
         <!-- Cuadro 2 que conecta con la página #2-->
@@ -69,7 +69,7 @@
 
         <p id="b-2"> Formación en investigación, desarrollo tecnológico, innovación y creación artística y cultural.</p>
 
-        <a href="../html/pag2.html"><button class="btn-more" id="info-btn-emp">Más</button></a>
+        <a href="./html/pag2.html"><button class="btn-more" id="info-btn-emp">Más</button></a>
     </div>
 
         <!-- Cuadro 3 que conecta con la página #3-->
@@ -78,7 +78,7 @@
 
         <p id="b-3">Asesoría personalizada virtual o presencial para la resolución de dudas y apoyo en la creación de material publicitario. </p>
 
-        <a href="../html/pag3.html"><button class="btn-more" id="info-btn-Cons">Más</button></a>
+        <a href="./html/pag3.html"><button class="btn-more" id="info-btn-Cons">Más</button></a>
     </div>
 
     </main>
@@ -90,7 +90,7 @@
     <section class="logramos" id="achieve">
 
         <!-- Onda principal para dividir la sección-->
-        <img src="../assets/wave.svg" alt="division" class="wave" >
+        <img src="./assets/wave.svg" alt="division" class="wave" >
         <div class="logramos-body" >
 
             <!-- Titulo de segunda sección-->
@@ -111,20 +111,20 @@
             <!-- Logo del Banco de Alimentos-->
             <div class="seccion-banco">
                 <a href="#" class="banco-icon">
-                <img src="../assets/Logo-icon-BAB.png" alt="img-banco" class="link-banco">
+                <img src="./assets/Logo-icon-BAB.png" alt="img-banco" class="link-banco">
                 </a>
             </div>
 
             <!-- Logo de la Universidad Libre-->
         <div class="seccion-uni">
             <a href="#" class="uni-icon">
-            <img src="../assets/1200px-Escudo_de_la_Universidad_Libre_de_Colombia.svg.png" alt="img-banco" class="link-uni">
+            <img src="./assets/1200px-Escudo_de_la_Universidad_Libre_de_Colombia.svg.png" alt="img-banco" class="link-uni">
             </a>
         </div>
         </div>    
 
         <!-- Onda final para dividir la sección-->
-        <img src="../assets/wave (4).svg" alt="division" class="wave wave_bottom">
+        <img src="./assets/wave (4).svg" alt="division" class="wave wave_bottom">
     </section>
 
         <!-- Tercera sección informativa de la página -->
@@ -160,14 +160,14 @@
             <div class="conections">
             <a href="https://api.whatsapp.com/send?phone=3115763645" class="btn-wsp" target="_blank"><!--el target="_blank" es para que cuando se oprima, salga a otra pagina-->
                 <i class="icon-whatsapp">
-                    <img src="../assets/iconfinder_app_logo_media_popular_social_whatsapp_3225179.svg" alt="logo wsp" class="btn-wst">
+                    <img src="./assets/iconfinder_app_logo_media_popular_social_whatsapp_3225179.svg" alt="logo wsp" class="btn-wst">
                 </i>
             </a>
 
              <!-- Logo de gmail con link-->
             <a href="mailto:jlarotta@bancodealimentos.org.co">
                 <i class="icon-mail">
-                    <img src="../assets/iconfinder_gmail_google_mail_1220340.svg" alt="logo gmail" class="btn-mail">
+                    <img src="./assets/iconfinder_gmail_google_mail_1220340.svg" alt="logo gmail" class="btn-mail">
                 </i>
             </a>
             </div>
@@ -218,14 +218,14 @@
         <!-- Logo del Banco de ALimentos en el footer-->
         <div class="footer-banco">
                 <a href="https://www.bancodealimentos.org.co/" class="-footer-banco-icon">
-                <img src="../assets/Logo-icon-BAB.png" alt="img-banco" class="footer-link-banco">
+                <img src="./assets/Logo-icon-BAB.png" alt="img-banco" class="footer-link-banco">
                 </a>
             </div>
 
             <!-- Llogo de la Universidad Libre en el footer-->
         <div class="footer-uni">
             <a href="https://www.unilibre.edu.co/" class="footer-uni-icon">
-            <img src="../assets/1200px-Escudo_de_la_Universidad_Libre_de_Colombia.svg.png" alt="img-banco" class="footer-link-uni">
+            <img src="./assets/1200px-Escudo_de_la_Universidad_Libre_de_Colombia.svg.png" alt="img-banco" class="footer-link-uni">
             </a>
         </div>
         
@@ -243,22 +243,22 @@
         <div clas="social-icon-container">
             <a href="" class="social-icon facebook">
                 <i href="#">
-                    <img src="../assets/iconfinder_fb_facebook_facebook logo_5305154.svg" alt="icon facebook" class="social-icon-fb">
+                    <img src="./assets/iconfinder_fb_facebook_facebook logo_5305154.svg" alt="icon facebook" class="social-icon-fb">
                 </i>
             </a>
             <a href="" class="social-icon.instagram">
                 <i href="#">
-                    <img src="../assets/iconfinder_camera_instagram_social media_instagram logo_5279112.svg" alt="instagram icon" class="social-icon-ig">
+                    <img src="./assets/iconfinder_camera_instagram_social media_instagram logo_5279112.svg" alt="instagram icon" class="social-icon-ig">
                 </i>
             </a>
             <a href="" class="social-icon-twitter">
                 <i href="#">
-                    <img src="../assets/iconfinder_logo_twitter_353427 (1).svg" alt="twitter icon" class="social-icon-tw">
+                    <img src="./assets/iconfinder_logo_twitter_353427 (1).svg" alt="twitter icon" class="social-icon-tw">
                 </i>
             </a>
             <a href="" class="social-icon-tiktok">
                 <i href="#">
-                    <img src="../assets/iconfinder_tiktok_social media_logo_apps_7693325.svg" alt="tiktok icon" class="social-icon-tk">
+                    <img src="./assets/iconfinder_tiktok_social media_logo_apps_7693325.svg" alt="tiktok icon" class="social-icon-tk">
                 </i>
             </a>
             
