--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     </nav>
 </header>
 
-    <br><br><br><br>
 <!-- Sección principal de texto e imagen-->
 <main class="initial-info" id="know">
         <div class="initial-info-div" >
@@ -52,7 +51,7 @@
             </div>    
         </div>
         
-    
+    <div class="flex">
         <!-- Cuadro 1 que conecta con la página #1-->
     <div class="box-1"  id="box-1">
         <h3 id="t-1">Emprendimiento y Planeación</h3>
@@ -81,6 +80,7 @@
         <a href="./html/pag3.html"><button class="btn-more" id="info-btn-Cons">Más</button></a>
     </div>
 
+</div>
     </main>
 
 
