Cambios 5 de agosto - WM

--- a/html/pag2.html
+++ b/html/pag2.html
@@ -23,7 +23,7 @@
         <ul class="menu">
             <li><a href="#service">Servicio</a></li>
             <li><a href="#topic">Temas</a></li>
-            <li><a href="#contact">Contactanos</a></li>
+            <li><a href="#contact">Contáctenos</a></li>
         </ul>
         </div>
     </nav>
@@ -32,6 +32,7 @@
 <main class="principal-info-2" id="service">
     <div class="principal-info-2-div">
         <div class="principal-info-2-portada">
+            <br>
             <h1>Formación</h1>
             <p class="principal-text-2">Nuestro equipo se propone el ofrecer formación y capacitación integral durante todo el proceso de aprendizaje. Estamos comprometidos en brindar las herramientas y conocimientos necesarios para realizar proyectos exitosos y desarrollar ideas innovadoras en diversos campos.
                 <br>
@@ -44,12 +45,12 @@
 <section class="second-info-2"id="topic">
     <img  src="../assets/pag2.jpeg"lo alt="imgP" class="principal-img-2">
         <div class="list-2">
-            <h2 class="temas-2">Temas</h2><br>
+            <h2 class="temas-2">TEMAS</h2><br>
             <ul class="list-container-2">
                 <li class="info-item-2"><strong>Consejería y Formación:</strong></li>
-                    <p class="text-item-2">Ofrecemos formación y consejería en áreas clave como investigación, desarrollo tecnológico, innovación y creación artística y cultural. Nuestro objetivo es brindar el conocimiento y las herramientas necesarias para una organización exitosa y una adecuada postulación de ideas. </p>
+                    <p class="text-item-2">Ofrecemos formación y consejería en áreas clave como investigación, desarrollo tecnológico, innovación y creación artística y cultural. Nuestro objetivo es brindar el conocimiento y las herramientas necesarias para una organización exitosa y una adecuada generación de ideas. </p>
                 <li class="info-item-2"><strong>Guía y Acompañamiento:</strong></li>
-                    <p class="text-item-2">Seguimiento en la implementación de estos conocimientos en tus proyectos. </p>   
+                    <p class="text-item-2">Seguimiento en la implementación de estos conocimientos en sus proyectos. </p>   
                 <li class="info-item-2"><strong>Acompañamiento en problemas de innovación:</strong></li>
                     <p class="text-item-2">Brindamos asesoría y capacitación especializada en la resolución de problemas de innovación y la realización de planes estratégicos.</p>
                 <!--<li class="info-item-2"><strong>Analisis de viabilidad y planeación:</strong></li>
@@ -68,9 +69,14 @@
 
 <section class="contactanos" id="contact">
     <div class="contac-body">
-        <h2 class="contact-tittle">¿Como contactarnos?</h2>
+        <h2 class="contact-tittle">¿Cómo contáctarnos?</h2>
         <div class="contact-text">
-            <p>¡Únete al Laboratorio de Innovación Social escribiendo por medio de whatsapp o gmail y descubre todos los servicios que hay para tu empresa o fundación! Contáctanos a través de correo electrónico o WhatsApp y descubre cómo podemos ayudarte a impulsar tu organización hacia el éxito. ¡No pierdas la oportunidad de acceder a soluciones innovadoras y eficientes para abordar tus desafíos y alcanzar tus metas! Contáctanos ahora y comienza a beneficiarte de nuestro laboratorio de ideas y conocimientos. ¡Estamos ansiosos por trabajar contigo!</p>
+            <p>¡Únase al Laboratorio de Innovación Social escribiendo por medio de WhatsApp o Gmail y descubra todos los servicios que hay para su empresa o fundación! 
+                <br>
+                <br>
+                ¡Contáctenos ahora y no pierda la oportunidad de acceder a soluciones innovadoras y eficientes para abordar los desafíos y alcanzar sus metas! 
+                <br>
+                <br>
         </div>
         <div class="conections">
         <a href="https://api.whatsapp.com/send?phone=3115763645" class="btn-wsp" target="_blank"><!--el target="_blank" es para que cuando se oprima, salga a otra pagina-->
@@ -108,10 +114,10 @@
         </div>
         
         <div class="contact">
-            <h3 class="contactanos-text">Contactanos</h3>
+            <h3 class="contactanos-text">CONTÁCTENOS</h3>
         </div>
         <div class="siguenos">
-            <h3 class="siguenos-text">siguenos:</h3>
+            <h3 class="siguenos-text">REDES SOCIALES:</h3>
         </div>
         <div clas="social-icon-container">
             <a href="" class="social-icon facebook">
